# AutoModder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  praw.ini  pre_push.py  pyproject.toml
automodder/: __init__.py  __main__.py  checks.py  cli.py  const.py  logger.py  utils.py
automodder/managers/: __init__.py  inactivity.py  modmail.py  modqueue.py
automodder/models/: __init__.py  config.py  context_object.py  google_sheets.py  subreddit_bucket.py  writers.py
